--- a/nbs/home_credit.ipynb
+++ b/nbs/home_credit.ipynb
@@ -932,9 +932,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "mean, median, prod, sum, std, var, max, min, "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -966,15 +964,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aggreate(df, params, by_col):\n",
-    "    df_agg = df[list(params.keys()) + to_list(by_col)].groupby(by_col).agg(params).reset_index()\n",
+    "    '''mean, median, prod, sum, std, var, max, min, count\n",
+    "    '''\n",
+    "    df_agg = df[list(params.keys())+to_list(by_col)].groupby(by_col).agg(params).reset_index()\n",
     "    agg_cols = ['_'.join([i for i in c if i != '']) for c in df_agg.columns.tolist()]\n",
     "    df_agg.columns = agg_cols\n",
     "    return df_agg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bureau_proc_agg = aggreate(bureau_proc, agg_params, 'SK_ID_CURR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SK_ID_CURR</th>\n",
+       "      <th>AMT_CREDIT_MAX_OVERDUE_suma</th>\n",
+       "      <th>AMT_CREDIT_MAX_OVERDUE_sum</th>\n",
+       "      <th>AMT_CREDIT_MAX_OVERDUE_min</th>\n",
+       "      <th>AMT_CREDIT_SUM_min</th>\n",
+       "      <th>AMT_CREDIT_SUM_max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100001</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>85500.0</td>\n",
+       "      <td>378000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>8405.145</td>\n",
+       "      <td>8405.145</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>450000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100003</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22248.0</td>\n",
+       "      <td>810000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100004</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94500.0</td>\n",
+       "      <td>94537.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100005</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>29826.0</td>\n",
+       "      <td>568800.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SK_ID_CURR  AMT_CREDIT_MAX_OVERDUE_suma  AMT_CREDIT_MAX_OVERDUE_sum  \\\n",
+       "0      100001                        0.000                       0.000   \n",
+       "1      100002                     8405.145                    8405.145   \n",
+       "2      100003                        0.000                       0.000   \n",
+       "3      100004                        0.000                       0.000   \n",
+       "4      100005                        0.000                       0.000   \n",
+       "\n",
+       "   AMT_CREDIT_MAX_OVERDUE_min  AMT_CREDIT_SUM_min  AMT_CREDIT_SUM_max  \n",
+       "0                         0.0             85500.0            378000.0  \n",
+       "1                         0.0                 0.0            450000.0  \n",
+       "2                         0.0             22248.0            810000.0  \n",
+       "3                         0.0             94500.0             94537.8  \n",
+       "4                         0.0             29826.0            568800.0  "
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bureau_proc_agg.head()"
    ]
   },
   {
