split ds from learner

--- a/nbs/partial dependence.ipynb
+++ b/nbs/partial dependence.ipynb
@@ -52,9 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# read file"
    ]
@@ -62,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file_path = Path('/media/zero/dropbox/Dropbox/Data science project/kaggle/home_credit_default_risk/data')"
@@ -73,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "app_train = pd.read_csv(str(file_path/'application_train.csv'))"
@@ -84,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "app_train_proc, y, na_dict = tabular_proc(app_train, y_fld = 'TARGET', max_n_cat=15)"
@@ -94,27 +86,21 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "app_test = pd.read_csv(str(file_path/'application_test.csv'))"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "app_test_proc, _, _ = tabular_proc(app_test, max_n_cat=15, na_dict = na_dict)"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "app_train_proc = app_train_proc[app_test_proc.columns]"
    ]
@@ -136,162 +122,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lightgbm as lgb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['SK_ID_CURR', 'CNT_CHILDREN', 'AMT_INCOME_TOTAL', 'AMT_CREDIT',\n",
-       "       'AMT_ANNUITY', 'AMT_GOODS_PRICE', 'REGION_POPULATION_RELATIVE',\n",
-       "       'DAYS_BIRTH', 'DAYS_EMPLOYED', 'DAYS_REGISTRATION',\n",
-       "       ...\n",
-       "       'WALLSMATERIAL_MODE_Mixed', 'WALLSMATERIAL_MODE_Monolithic',\n",
-       "       'WALLSMATERIAL_MODE_Others', 'WALLSMATERIAL_MODE_Panel',\n",
-       "       'WALLSMATERIAL_MODE_Stone, brick', 'WALLSMATERIAL_MODE_Wooden',\n",
-       "       'WALLSMATERIAL_MODE_nan', 'EMERGENCYSTATE_MODE_No',\n",
-       "       'EMERGENCYSTATE_MODE_Yes', 'EMERGENCYSTATE_MODE_nan'],\n",
-       "      dtype='object', length=246)"
-      ]
-     },
-     "execution_count": 195,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "app_train_proc.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = lgb.Dataset(app_train_proc[['SK_ID_CURR', 'CNT_CHILDREN', 'AMT_INCOME_TOTAL', 'AMT_CREDIT']], \n",
-    "            app_train_proc[['AMT_ANNUITY', 'AMT_GOODS_PRICE', 'REGION_POPULATION_RELATIVE']], \n",
-    "            free_raw_data=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         0.018801\n",
-       "1         0.003541\n",
-       "2         0.010032\n",
-       "3         0.008019\n",
-       "4         0.028663\n",
-       "5         0.035792\n",
-       "6         0.035792\n",
-       "7         0.003122\n",
-       "8         0.018634\n",
-       "9         0.019689\n",
-       "10        0.022800\n",
-       "11        0.015221\n",
-       "12        0.031329\n",
-       "13        0.016612\n",
-       "14        0.010006\n",
-       "15        0.020713\n",
-       "16        0.018634\n",
-       "17        0.010966\n",
-       "18        0.046220\n",
-       "19        0.015221\n",
-       "20        0.015221\n",
-       "21        0.025164\n",
-       "22        0.020713\n",
-       "23        0.006296\n",
-       "24        0.026392\n",
-       "25        0.028663\n",
-       "26        0.018029\n",
-       "27        0.019101\n",
-       "28        0.046220\n",
-       "29        0.030755\n",
-       "            ...   \n",
-       "307481    0.008575\n",
-       "307482    0.031329\n",
-       "307483    0.007330\n",
-       "307484    0.032561\n",
-       "307485    0.003813\n",
-       "307486    0.072508\n",
-       "307487    0.010147\n",
-       "307488    0.004960\n",
-       "307489    0.014464\n",
-       "307490    0.010147\n",
-       "307491    0.019101\n",
-       "307492    0.028663\n",
-       "307493    0.019689\n",
-       "307494    0.035792\n",
-       "307495    0.025164\n",
-       "307496    0.004960\n",
-       "307497    0.007020\n",
-       "307498    0.072508\n",
-       "307499    0.007020\n",
-       "307500    0.031329\n",
-       "307501    0.009175\n",
-       "307502    0.010966\n",
-       "307503    0.022800\n",
-       "307504    0.022625\n",
-       "307505    0.022800\n",
-       "307506    0.032561\n",
-       "307507    0.025164\n",
-       "307508    0.005002\n",
-       "307509    0.005313\n",
-       "307510    0.046220\n",
-       "Name: REGION_POPULATION_RELATIVE, Length: 307511, dtype: float64"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.label.iloc[:,2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(a.label.shape)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# keep feature"
    ]
@@ -299,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "keep_ft = flat_list([['EXT_SOURCE_3'],\n",
@@ -343,9 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset.filter_column(keep_ft)"
@@ -353,7 +181,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# baseline model"
    ]
@@ -362,7 +192,8 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -386,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learner = LGBLearner(dataset)"
@@ -395,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learner.load()"
@@ -406,110 +241,6 @@
    "metadata": {},
    "source": [
     "# partial dependence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "class PartialDependence():\n",
-    "    def __init__(self, md, df, features, target):\n",
-    "        self.md = md\n",
-    "        self.df = df\n",
-    "        self.features = features\n",
-    "        self.target = target\n",
-    "        self.summary = {}\n",
-    "        \n",
-    "    @classmethod    \n",
-    "    def from_LGBLearner(cls, learner):\n",
-    "        df = dataset.lgb_trn.data.copy()\n",
-    "        features = df.columns\n",
-    "        \n",
-    "        if len(dataset.lgb_trn.label.shape) == 1:\n",
-    "            df['target'] = dataset.lgb_trn.label\n",
-    "            target = ['target']\n",
-    "        else:\n",
-    "            target = []\n",
-    "            for i in range(dataset.lgb_trn.label.shape[1]):\n",
-    "                tgt_name = 'target' + str(i)\n",
-    "                df[tgt_name] = dataset.lgb_trn.label.iloc[:,i]\n",
-    "                target.append(tgt_name)\n",
-    "        return cls(learner.md, df, features, target)\n",
-    "    \n",
-    "    def info_target(self, var, sample = 10000, target = None, grid_type = 'percentile', **kargs):        \n",
-    "        fig, axes, self.summary['info_target'] = info_plots.target_plot(\n",
-    "                df=self.sample(sample), feature=var, feature_name=var, \n",
-    "                target=isnone(target, self.target), grid_type = grid_type, **kargs)\n",
-    "\n",
-    "        _ = axes['bar_ax'].set_xticklabels(self.summary['info_target'].display_column.values)\n",
-    "        plt.show()    \n",
-    "    \n",
-    "    def info_actual(self, var, sample = 10000, predict_kwds = {}, which_classes=None, **kargs):\n",
-    "        \n",
-    "        fig, axes, self.summary['info_actual'] = info_plots.actual_plot(\n",
-    "                model=self.md, \n",
-    "                X=self.sample(sample), \n",
-    "                feature=var, feature_name=var,\n",
-    "                predict_kwds=predict_kwds, which_classes = which_classes, **kargs)\n",
-    "        plt.show()        \n",
-    "    \n",
-    "    def isolate(self, var, sample = 10000,\n",
-    "                num_grid_points=10, grid_type='percentile',\n",
-    "                center = True, plot_lines=True, frac_to_plot=100, plot_pts_dist=True, \n",
-    "                cluster=True, n_cluster_centers=10, cluster_method='accurate',\n",
-    "                which_classes= None, **pdp_kargs):\n",
-    "        \n",
-    "        ft_plot = pdp.pdp_isolate(\n",
-    "                model=self.md, dataset=self.sample(sample), \n",
-    "                model_features = self.features, feature=var,\n",
-    "                num_grid_points=num_grid_points, grid_type=grid_type,\n",
-    "                n_jobs=-1, **pdp_kargs)\n",
-    "\n",
-    "        fig, axes = pdp.pdp_plot(\n",
-    "                pdp_isolate_out=ft_plot, feature_name=var,\n",
-    "                center=center, plot_lines=plot_lines, frac_to_plot=frac_to_plot, plot_pts_dist=plot_pts_dist, \n",
-    "                cluster=cluster, n_cluster_centers=n_cluster_centers, which_classes=which_classes)\n",
-    "        plt.show()\n",
-    "        \n",
-    "    def target_interact(self, var, var_name = None, target=None,\n",
-    "                        sample = 10000, show_outliers=True, **kargs):\n",
-    "    \n",
-    "        fig, axes, self.summary['target_interact'] = info_plots.target_plot_interact(\n",
-    "                df=self.sample(sample), target=isnone(target, self.target),\n",
-    "                features= var, feature_names = isnone(var_name, var),\n",
-    "                show_outliers=show_outliers, **kargs)\n",
-    "        plt.show()\n",
-    "        \n",
-    "    def actual_interact(self, var, var_name = None, \n",
-    "                        sample = 10000, which_classes = None, show_outliers=True, **kargs):\n",
-    "    \n",
-    "        fig, axes, self.summary['actual_interact'] = info_plots.actual_plot_interact(\n",
-    "                model = self.md, X = self.sample(sample),\n",
-    "                features=var, feature_names=isnone(var_name, var), \n",
-    "                which_classes=which_classes, show_outliers= show_outliers, **kargs)\n",
-    "        plt.show()\n",
-    "        \n",
-    "    def pdp_interact(self, var, var_name=None, sample = 10000, which_classes = None,\n",
-    "                     num_grid_points=[10, 10], plot_types = None):\n",
-    "        \n",
-    "        ft_plot = pdp.pdp_interact(\n",
-    "                model=self.md, dataset=self.sample(sample), \n",
-    "                model_features=self.features, features=var, \n",
-    "                num_grid_points=num_grid_points, n_jobs=4)\n",
-    "        \n",
-    "        plot_types = ['contour', 'grid'] if plot_types is None else [plot_types]\n",
-    "        for plot_type in plot_types:\n",
-    "            figs, ax = pdp.pdp_interact_plot(\n",
-    "                pdp_interact_out = ft_plot, \n",
-    "                feature_names = isnone(var_name, var), \n",
-    "                plot_type= plot_type, plot_pdp=True, which_classes=which_classes)\n",
-    "        plt.show()\n",
-    "    \n",
-    "    def sample(self, sample): return self.df if sample is None else self.df.sample(sample)"
    ]
   },
   {
