--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -17,13 +17,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```git clone https://github.com/KienVu2368/tabint\n",
+    "git clone https://github.com/KienVu2368/tabint\n",
     "cd tabint\n",
     "conda env create -f environment.yml\n",
-    "conda activate tabint```"
+    "conda activate tabint"
    ]
   },
   {
@@ -643,6 +645,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
