--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Welcom to Tabint\n",
-    "> NB: this is on development process, many things we want to develop but have not yet done. If you want to contribute please feel free to do so.\n",
-    "We are according to nbdev style. So if you do contribute, please do so accordingly. For more information about nbdev style, please visit [nbdev document](https://nbdev.fast.ai/)"
+    "> NB: this is on development process, many things we want to develop but have not yet done. If you want to contribute please feel free to do so. We are according to nbdev style. So if you do contribute, please do so accordingly. For more information about nbdev style, please visit [nbdev document](https://nbdev.fast.ai/)"
    ]
   },
   {
